--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,11 @@ footer{
     line-height: 50px
 }
 .sublist_item {
-    height: 40px;
+    
     width: calc(100% - 40px);
     font-size: 14px;
-    padding:10px 20px 10px 30px;
-    line-height: 40px
+    padding:20px;
+    
 }
 .hlist{
     font-size: 30px;
