--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ a:hover{
 }
 #logo {
     height: 100%;
-    width: 100px;
+    width: 150px;
     margin-left: 50px;
     float: left;
     background-image: url(../rsc/logo.svg);
@@ -248,6 +248,9 @@ a:hover{
     }
     .dropdown{
         display:none!important;
+    }
+    #logo{
+        margin-left: 20px;
     }
    
 }
