--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,11 @@ footer{
     z-index: 1000;
     -webkit-transition: right 400ms cubic-bezier(0.7,0,0.3,1);
     transition: right 400ms cubic-bezier(0.7,0,0.3,1);
+    -webkit-transform: translateZ(0);
+-moz-transform: translateZ(0);
+-ms-transform: translateZ(0);
+-o-transform: translateZ(0);
+transform: translateZ(0);
 }
 #list.open{
     right:0px;
@@ -148,11 +153,15 @@ footer{
     line-height: 50px
 }
 .sublist_item {
-    
+    line-height: 1.7;
     width: calc(100% - 40px);
     font-size: 14px;
-    padding:20px;
+    padding:10px 20px 10px 30px;
     
+}
+.sublist_item:hover{
+    background: #22b8f0;
+    color:white;
 }
 .hlist{
     font-size: 30px;
@@ -201,9 +210,7 @@ a:hover{
     overflow: auto;
     overflow-x: hidden
 }
-.scrollpane div:hover{
-    color:#22b8f0;
-}
+
 .up{
     top:-40px;
 }
