--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ header{
     transition: top 500ms;
     z-index: 990;
 }
-
+.stop{
+    overflow: hidden;
+}
 #top_bar{
     
     width: 100%;
@@ -118,11 +120,8 @@ footer{
     z-index: 1000;
     -webkit-transition: right 400ms cubic-bezier(0.7,0,0.3,1);
     transition: right 400ms cubic-bezier(0.7,0,0.3,1);
-    -webkit-transform: translateZ(0);
--moz-transform: translateZ(0);
--ms-transform: translateZ(0);
--o-transform: translateZ(0);
-transform: translateZ(0);
+    
+    
 }
 #list.open{
     right:0px;
@@ -143,6 +142,7 @@ transform: translateZ(0);
     text-align: center;
     top: 0; 
     right: 0;
+    
 }
 .list_item {
     background: #f6f6f6;
@@ -150,14 +150,17 @@ transform: translateZ(0);
     width: calc(100% - 40px);
     font-size: 18px;
     padding:0 20px ;
-    line-height: 50px
+    line-height: 50px;
+    backface-visibility: hidden; transform: translateZ(0);
+    -webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
 }
 .sublist_item {
     line-height: 1.7;
     width: calc(100% - 40px);
     font-size: 14px;
     padding:10px 20px 10px 30px;
-    
+    backface-visibility: hidden; transform: translateZ(0);
+    -webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
 }
 .sublist_item:hover{
     background: #22b8f0;
@@ -209,6 +212,8 @@ a:hover{
     height: calc( 100% - 50px );
     overflow: auto;
     overflow-x: hidden;
+    backface-visibility: hidden; transform: translateZ(0);
+    -webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
     
 }
 
@@ -260,13 +265,7 @@ a:hover{
     #logo{
         margin-left: 20px;
     }
-    .scrollpane {
     
-    overflow-x: hidden;
-    overflow-y: scroll; /* has to be scroll, not auto */
-    -webkit-overflow-scrolling: touch;
-}
-
    
 }
 
