--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ footer{
     height: 100%;
     max-width: 350px;
     background: white;
+    overflow: hidden;
     z-index: 1000;
     -webkit-transition: right 400ms cubic-bezier(0.7,0,0.3,1);
     transition: right 400ms cubic-bezier(0.7,0,0.3,1);
@@ -264,6 +265,9 @@ a:hover{
     }
     #logo{
         margin-left: 20px;
+    }
+    #list{
+        max-width: 100%;
     }
     
    
