--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header #main_bar a{
     vertical-align: middle;
 }
 
-section{
+section:last-of-type{
     height: 1000px;
    
 }
@@ -67,14 +67,18 @@ section{
     background-size: cover;    
 }
 #photo h1{
-    color:transparent;
+    color:white;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url(../rsc/heading.svg);
     line-height: 100px;
     font-weight: 800;
     font-size: 70px;
+    animation: fade-in-up ease-in-out 1s;
+    -webkit-animation:  fade-in-up ease-in-out 1s;
+    -moz-animation:  fade-in-up ease-in-out 1s;
+    -o-animation:  fade-in-up ease-in-out 1s;
+    -ms-animation:  fade-in-up ease-in-out 1s;
     
 }
 #photo p{
@@ -83,6 +87,11 @@ section{
     font-weight: 300;
     margin: 0 auto;
     max-width: 80%;
+    animation: fade-in-up ease-in-out 1s;
+    -webkit-animation:  fade-in-up ease-in-out 1s;
+    -moz-animation:  fade-in-up ease-in-out 1s;
+    -o-animation:  fade-in-up ease-in-out 1s;
+    -ms-animation:  fade-in-up ease-in-out 1s;
 }
 .center {
     padding: 200px 0;
@@ -265,11 +274,80 @@ a:hover{
     font-family: Open Sans, sans-serif;
     font-weight: 600;
     font-size: 24px;
+    line-height: 1.5;
 }
 .sub_head span{
     color:white;
     font-size: 14px;
 }
+.sub_head span a{
+    color:white;
+    padding: 0 7px;
+}
+.sub_head span a:first-child{
+    padding: 0 7px 0 0;
+}
+.head{
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-image: url(../IT_Bussiness_Solutions/office.jpg);
+}
+
+.head p {
+    color: white;
+    line-height: 1.5;
+    padding: 20px 50px 50px 50px;
+    width: calc(100% - 450px);
+    font-size: 20px;
+    font-weight: 500;
+    animation: fade-in-up ease-in-out 1s;
+    -webkit-animation:  fade-in-up ease-in-out 1s;
+    -moz-animation:  fade-in-up ease-in-out 1s;
+    -o-animation:  fade-in-up ease-in-out 1s;
+    -ms-animation:  fade-in-up ease-in-out 1s;
+}
+.head p:first-child {
+    font-weight: 600;
+    font-size: 25px;
+    padding: 50px 50px 0 50px;
+}
+.head span{
+    position: absolute;
+    margin: auto;
+    height: 130px;
+    width: 300px;
+    padding: 0 50px;
+    top: 0;  bottom: 0; 
+    right: 0;
+}
+.head span img:last-child{
+    float:right;
+    animation: fade-in-right ease-in-out 1s;
+    -webkit-animation: fade-in-right ease-in-out 1s;
+    -moz-animation: fade-in-right ease-in-out 1s;
+    -o-animation: fade-in-right ease-in-out 1s;
+    -ms-animation: fade-in-right ease-in-out 1s;
+    
+}
+.head span img:first-child{
+    float:left;
+    animation: fade-in-left ease-in-out 1s;
+    -webkit-animation: fade-in-left ease-in-out 1s;
+    -moz-animation:fade-in-left ease-in-out 1s;
+    -o-animation: fade-in-left ease-in-out 1s;
+    -ms-animation:fade-in-left ease-in-out 1s;
+    
+}
+.head span div{
+    top:0;
+    position: absolute;
+    width: 150px;
+    border-right:solid rgba(255,255,255,0.3);
+    height: 100%;
+}
+
+
 
 @media screen and (max-width: 830px) {
     header a[id^="a_"]{
@@ -308,89 +386,32 @@ a:hover{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*///////////////////////////////////////////////////////////////////////////////////*/
-header{
-  animation: header-load ease-in-out 1s;
+/*.fade-in-down{
+  animation: fade-in-down linear 1s;
   animation-iteration-count: 1;
   transform-origin: 50% 50%;
-  animation-fill-mode:forwards; /*when the spec is finished*/
-  -webkit-animation: header-load ease-in-out 1s;
+  -webkit-animation: fade-in-down linear 1s;
   -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
-  -moz-animation: header-load ease-in-out 1s;
+  -moz-animation: fade-in-down linear 1s;
   -moz-animation-iteration-count: 1;
   -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode:forwards; /*FF 5+*/
-  -o-animation: header-load ease-in-out 1s;
+  -o-animation: fade-in-down linear 1s;
   -o-animation-iteration-count: 1;
   -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode:forwards; /*Not implemented yet*/
-  -ms-animation: header-load ease-in-out 1s;
+  -ms-animation: fade-in-down linear 1s;
   -ms-animation-iteration-count: 1;
   -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode:forwards; /*IE 10+*/
-}
+}*/
 
-@keyframes header-load{
-  0% {
-    transform:  translate(0px,-133px)  ;
-  }
-  100% {
-    transform:  translate(0px,0px)  ;
-  }
-}
 
-@-moz-keyframes header-load{
-  0% {
-    -moz-transform:  translate(0px,-133px)  ;
-  }
-  100% {
-    -moz-transform:  translate(0px,0px)  ;
-  }
-}
+@keyframes fade-in-down{0%{opacity:0;transform:translate(0,-15px)}100%{opacity:1;transform:translate(0,0)}}@-moz-keyframes fade-in-down{0%{opacity:0;-moz-transform:translate(0,-15px)}100%{opacity:1;-moz-transform:translate(0,0)}}@-webkit-keyframes fade-in-down{0%{opacity:0;-webkit-transform:translate(0,-15px)}100%{opacity:1;-webkit-transform:translate(0,0)}}@-o-keyframes fade-in-down{0%{opacity:0;-o-transform:translate(0,-15px)}100%{opacity:1;-o-transform:translate(0,0)}}@-ms-keyframes fade-in-down{0%{opacity:0;-ms-transform:translate(0,-15px)}100%{opacity:1;-ms-transform:translate(0,0)}}
 
-@-webkit-keyframes header-load {
-  0% {
-    -webkit-transform:  translate(0px,-133px)  ;
-  }
-  100% {
-    -webkit-transform:  translate(0px,0px)  ;
-  }
-}
 
-@-o-keyframes header-load {
-  0% {
-    -o-transform:  translate(0px,-133px)  ;
-  }
-  100% {
-    -o-transform:  translate(0px,0px)  ;
-  }
-}
+@keyframes fade-in-up{0%{opacity:0;transform:translate(0,15px)}100%{opacity:1;transform:translate(0,0)}}@-moz-keyframes fade-in-up{0%{opacity:0;-moz-transform:translate(0,15px)}100%{opacity:1;-moz-transform:translate(0,0)}}@-webkit-keyframes fade-in-up{0%{opacity:0;-webkit-transform:translate(0,15px)}100%{opacity:1;-webkit-transform:translate(0,0)}}@-o-keyframes fade-in-up{0%{opacity:0;-o-transform:translate(0,15px)}100%{opacity:1;-o-transform:translate(0,0)}}@-ms-keyframes fade-in-up{0%{opacity:0;-ms-transform:translate(0,15px)}100%{opacity:1;-ms-transform:translate(0,0)}}
 
-@-ms-keyframes header-load {
-  0% {
-    -ms-transform:  translate(0px,-133px)  ;
-  }
-  100% {
-    -ms-transform:  translate(0px,0px)  ;
-  }
-}
+
+@keyframes fade-in-left{0%{opacity:0;transform:translate(15px,0)}100%{opacity:1;transform:translate(0,0)}}@-moz-keyframes fade-in-left{0%{opacity:0;-moz-transform:translate(15px,0)}100%{opacity:1;-moz-transform:translate(0,0)}}@-webkit-keyframes fade-in-left{0%{opacity:0;-webkit-transform:translate(15px,0)}100%{opacity:1;-webkit-transform:translate(0,0)}}@-o-keyframes fade-in-left{0%{opacity:0;-o-transform:translate(15px,0)}100%{opacity:1;-o-transform:translate(0,0)}}@-ms-keyframes fade-in-left{0%{opacity:0;-ms-transform:translate(15px,0)}100%{opacity:1;-ms-transform:translate(0,0)}}
+
+
+@keyframes fade-in-right{0%{opacity:0;transform:translate(-15px,0)}100%{opacity:1;transform:translate(0,0)}}@-moz-keyframes fade-in-right{0%{opacity:0;-moz-transform:translate(-15px,0)}100%{opacity:1;-moz-transform:translate(0,0)}}@-webkit-keyframes fade-in-right{0%{opacity:0;-webkit-transform:translate(-15px,0)}100%{opacity:1;-webkit-transform:translate(0,0)}}@-o-keyframes fade-in-right{0%{opacity:0;-o-transform:translate(-15px,0)}100%{opacity:1;-o-transform:translate(0,0)}}@-ms-keyframes fade-in-right{0%{opacity:0;-ms-transform:translate(-15px,0)}100%{opacity:1;-ms-transform:translate(0,0)}}
