--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body{
     font-family: Open Sans, sans-serif;
 }
+.stop{ position: fixed; overflow-y:scroll }
 header{
     top:0;
     height: 120px;
@@ -11,9 +12,7 @@ header{
     transition: top 500ms;
     z-index: 990;
 }
-.stop{
-    overflow: hidden;
-}
+
 #top_bar{
     
     width: 100%;
@@ -107,6 +106,7 @@ footer{
 
 #dim {
     position: fixed;
+    top:0;
     height: 100%;
     width: 100%;
     background: rgba(0,0,0,0);
@@ -122,6 +122,7 @@ footer{
 
 #list {
     position: fixed;
+    top:0;
     right: -360px;
     height: 100%;
     max-width: 350px;
@@ -155,6 +156,7 @@ footer{
     
 }
 .list_item {
+    display: block;
     background: #f6f6f6;
     height: 50px;
     width: calc(100% - 40px);
