--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ footer{
     -webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
 }
 .sublist_item {
+    display: block;
     line-height: 1.7;
     width: calc(100% - 40px);
     font-size: 14px;
