--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,11 @@ a:hover{
 
 
 @media screen and (max-width: 830px) {
+    a.sublist_item {
+    color: red;
+    
+    width: calc(100% - 40px);
+    }
     header a[id^="a_"]{
        display:none!important;
     }
