--- a/css/style.css
+++ b/css/style.css
@@ -148,20 +148,17 @@ footer{
 #list {
     position: fixed;
     top:0;
+    transition: transform 0.6s ease;
     right: -360px;
     height: 100%;
     max-width: 350px;
     background: white;
     overflow: hidden;
     z-index: 1000;
-    -webkit-transition: right 400ms cubic-bezier(0.7,0,0.3,1);
-    transition: right 400ms cubic-bezier(0.7,0,0.3,1);
     
     
 }
-#list.open{
-    right:0px;
-}
+
 
 .fa-times:hover{
     background: rgb(245,245,245);
