--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 .flag{
     float:left;
-    height: 100%;
+    height: 40px;
     width: 50px;
 }
 .sk{
@@ -459,15 +459,22 @@ a:hover{
     .lang_drop{
         position:absolute;
         top:60px;
+        
         opacity: 0;
-        height: 80px;
+        padding:20px;
+        height: 40px;
         background: white;
         right: 0;
         width:150px;
+        -webkit-transition: all 400ms;
+    transition: all 400ms;
+        line-height: 40px;
     }
-    .lang_drop:hover{
+    .lang_drop.open{
+        
         opacity: 1;
         top:80px;
+        
     }
     .dropdown{
         display:none!important;
