--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-
 body{
     font-family: Open Sans, sans-serif;
 }
 .flag{
     float:left;
-    height: 100%;
+    height: 40px;
     width: 50px;
 }
 .sk{
@@ -164,6 +163,12 @@ footer{
     opacity: 1;
     pointer-events: all;
 }
+#dim.openTop{
+    top: 160px;
+    opacity: 0.7;
+    pointer-events: all;
+}
+
 
 #list {
     position: fixed;
@@ -392,9 +397,6 @@ a:hover{
     height: 200px;
     padding-top: 30px;
 }
-.lang_drop{
-    display: none;
-}
 
 
 
@@ -462,18 +464,22 @@ a:hover{
     .lang_drop{
         position:absolute;
         top:60px;
-
-        display: block;
-
+        z-index: 1002;
         opacity: 0;
-        height: 80px;
+        padding:20px;
+        height: 40px;
         background: white;
         right: 0;
         width:150px;
+        -webkit-transition: all 400ms;
+    transition: all 400ms;
+        line-height: 40px;
     }
-    .lang_drop:hover{
+    .lang_drop.open{
+        
         opacity: 1;
         top:80px;
+        
     }
     .dropdown{
         display:none!important;
