--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,22 @@
 body{
-    font-family: Open Sans, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 .flag{
     float:left;
     height: 40px;
     width: 50px;
+    cursor: pointer;
+}
+[onclick*="stay"]{
+    cursor: auto;
+    opacity: 0.5;
 }
 .sk{
     background-image: url(../rsc/sk.svg);
     margin-left: 50px;
     background-position: center;
     background-repeat: no-repeat;
+    
 }
 .en{
     background-image: url(../rsc/uk.svg);
@@ -95,6 +101,7 @@ section h2{
     margin-bottom: 20px;
 }
 section p{
+
     font-size: 16px;
     font-weight: 300;
     line-height: 1.5;
@@ -128,7 +135,8 @@ section p{
     line-height: 26px;
     font-weight: 300;
     margin: 0 auto;
-    max-width: 80%;
+    max-width: 1100px;
+    width: 80%;
     animation: fade-in-up ease-in-out 1s;
     -webkit-animation:  fade-in-up ease-in-out 1s;
     -moz-animation:  fade-in-up ease-in-out 1s;
@@ -139,6 +147,7 @@ section p{
     padding: 200px 0;
 }
 footer{
+
     color:white;
     line-height: 50px;
     height: 50px;
